; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_generic.c_transition_one_qdisc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_generic.c_transition_one_qdisc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Qdisc = type { i32, i32 }
%struct.net_device = type { i32 }
%struct.netdev_queue = type { i64, i32, %struct.Qdisc* }

@TCQ_F_BUILTIN = common dso_local global i32 0, align 4
@__QDISC_STATE_DEACTIVATED = common dso_local global i32 0, align 4
@noqueue_qdisc = common dso_local global %struct.Qdisc zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, %struct.netdev_queue*, i8*)* @transition_one_qdisc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @transition_one_qdisc(%struct.net_device* %0, %struct.netdev_queue* %1, i8* %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.netdev_queue*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.Qdisc*, align 8
  %8 = alloca i32*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store %struct.netdev_queue* %1, %struct.netdev_queue** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.netdev_queue*, %struct.netdev_queue** %5, align 8
  %10 = getelementptr inbounds %struct.netdev_queue, %struct.netdev_queue* %9, i32 0, i32 2
  %11 = load %struct.Qdisc*, %struct.Qdisc** %10, align 8
  store %struct.Qdisc* %11, %struct.Qdisc** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %8, align 8
  %14 = load %struct.Qdisc*, %struct.Qdisc** %7, align 8
  %15 = getelementptr inbounds %struct.Qdisc, %struct.Qdisc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @TCQ_F_BUILTIN, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %25, label %20

20:                                               ; preds = %3
  %21 = load i32, i32* @__QDISC_STATE_DEACTIVATED, align 4
  %22 = load %struct.Qdisc*, %struct.Qdisc** %7, align 8
  %23 = getelementptr inbounds %struct.Qdisc, %struct.Qdisc* %22, i32 0, i32 1
  %24 = call i32 @clear_bit(i32 %21, i32* %23)
  br label %25

25:                                               ; preds = %20, %3
  %26 = load %struct.netdev_queue*, %struct.netdev_queue** %5, align 8
  %27 = getelementptr inbounds %struct.netdev_queue, %struct.netdev_queue* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.Qdisc*, %struct.Qdisc** %7, align 8
  %30 = call i32 @rcu_assign_pointer(i32 %28, %struct.Qdisc* %29)
  %31 = load i32*, i32** %8, align 8
  %32 = icmp ne i32* %31, null
  br i1 %32, label %33, label %40

33:                                               ; preds = %25
  %34 = load %struct.Qdisc*, %struct.Qdisc** %7, align 8
  %35 = icmp ne %struct.Qdisc* %34, @noqueue_qdisc
  br i1 %35, label %36, label %40

36:                                               ; preds = %33
  %37 = load %struct.netdev_queue*, %struct.netdev_queue** %5, align 8
  %38 = getelementptr inbounds %struct.netdev_queue, %struct.netdev_queue* %37, i32 0, i32 0
  store i64 0, i64* %38, align 8
  %39 = load i32*, i32** %8, align 8
  store i32 1, i32* %39, align 4
  br label %40

40:                                               ; preds = %36, %33, %25
  ret void
}

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @rcu_assign_pointer(i32, %struct.Qdisc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
